--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "./.quasar/tsconfig.json"
+  "extends": "./.quasar/tsconfig.json",
+
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue"],
+
+  "exclude": ["node_modules"]
 }
